// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LadderPage renders the empty state 1`] = `
<DocumentFragment>
  <div
    class="c-ladder-page c-ladder-page--picker-container-visible "
  >
    <div
      class="c-notifications"
    />
    <div
      class="c-picker-container c-picker-container--visible"
      data-testid="picker-container"
    >
      <button
        class="c-drawer-tab c-drawer-tab__tab-button"
        title="Collapse"
      >
        <span>
          <svg />
        </span>
      </button>
      <div
        class="c-ladder-page__routes-presets-toggle u-hideable"
      >
        <button
          class="c-ladder-page__routes_picker_button--selected"
          id="c-ladder-page__routes_picker_button"
        >
          Routes
        </button>
        <button
          class="c-ladder-page__routes_picker_button--unselected"
          id="c-ladder-page__presets_picker_button"
        >
          Presets
        </button>
      </div>
      <div
        class="c-route-picker u-hideable"
      >
        <div
          class="c-route-filter"
        >
          <div
            class="c-route-filter__text"
          >
            <input
              class="c-route-filter__input"
              placeholder="Search routes"
              type="text"
              value=""
            />
          </div>
        </div>
        <div
          class="c-garage-filter"
        >
          <button
            class="c-garage-filter__show-hide-button"
            title="Toggle Garage Filter"
          >
            <div
              class="c-garage-filter__header"
            >
              Filter garages
            </div>
            <div
              class="c-garage-filter__show-hide-icon"
            >
              <span>
                <svg />
              </span>
            </div>
          </button>
        </div>
        <div
          class="c-route-picker__routes-container"
        >
          loading...
          <p>
            Selected routes will show up here…
          </p>
        </div>
      </div>
    </div>
    <div
      aria-hidden="true"
      class="c-picker-container-backdrop"
      data-testid="picker-container-backdrop"
    />
    <div
      class="c-ladder-page__tab-bar-and-ladders"
    >
      <div
        class="c-ladder-page__route-tab-bar"
        role="tablist"
      >
        <button
          class="c-ladder-page__add-tab-button"
          title="Add Tab"
        >
          <span
            class="c-ladder-page__add-tab-icon"
          >
            <svg />
          </span>
        </button>
      </div>
      <div
        class="c-route-ladders"
        data-testid="route-ladders-div"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`LadderPage renders with alerts 1`] = `
<DocumentFragment>
  <div
    class="c-ladder-page c-ladder-page--picker-container-visible "
  >
    <div
      class="c-notifications"
    />
    <div
      class="c-picker-container c-picker-container--visible"
      data-testid="picker-container"
    >
      <button
        class="c-drawer-tab c-drawer-tab__tab-button"
        title="Collapse"
      >
        <span>
          <svg />
        </span>
      </button>
      <div
        class="c-ladder-page__routes-presets-toggle u-hideable"
      >
        <button
          class="c-ladder-page__routes_picker_button--selected"
          id="c-ladder-page__routes_picker_button"
        >
          Routes
        </button>
        <button
          class="c-ladder-page__routes_picker_button--unselected"
          id="c-ladder-page__presets_picker_button"
        >
          Presets
        </button>
      </div>
      <div
        class="c-route-picker u-hideable"
      >
        <div
          class="c-route-filter"
        >
          <div
            class="c-route-filter__text"
          >
            <input
              class="c-route-filter__input"
              placeholder="Search routes"
              type="text"
              value=""
            />
          </div>
        </div>
        <div
          class="c-garage-filter"
        >
          <button
            class="c-garage-filter__show-hide-button"
            title="Toggle Garage Filter"
          >
            <div
              class="c-garage-filter__header"
            >
              Filter garages
            </div>
            <div
              class="c-garage-filter__show-hide-icon"
            >
              <span>
                <svg />
              </span>
            </div>
          </button>
        </div>
        <div
          class="c-route-picker__routes-container"
        >
          <ul
            class="c-route-picker__route-list"
          />
          <ul
            class="c-route-picker__selected-routes"
          >
            <li>
              <button
                class="c-route-picker__selected-routes-button"
                tabindex="-1"
              >
                28
                <span
                  class="c-route-picker__selected-routes-button-icon"
                >
                  <svg />
                </span>
              </button>
            </li>
            <li>
              <button
                class="c-route-picker__selected-routes-button"
                tabindex="-1"
              >
                1
                <span
                  class="c-route-picker__selected-routes-button-icon"
                >
                  <svg />
                </span>
              </button>
            </li>
          </ul>
        </div>
      </div>
    </div>
    <div
      aria-hidden="true"
      class="c-picker-container-backdrop"
      data-testid="picker-container-backdrop"
    />
    <div
      class="c-ladder-page__tab-bar-and-ladders"
    >
      <div
        class="c-ladder-page__route-tab-bar"
        role="tablist"
      >
        <div
          aria-selected="true"
          class="c-ladder-page__tab c-ladder-page__tab-current"
          role="tab"
          tabindex="-1"
        >
          <div
            class="c-ladder-page__tab-contents"
          >
            <div
              class="c-ladder-page__tab-title"
            >
              Untitled
            </div>
            <button
              class="c-ladder-page__tab-save-button"
              title="Save"
            >
              <span>
                <svg />
              </span>
            </button>
            <button
              class="c-old-close-button"
              data-testid="close-button"
              title="Close"
            >
              <span>
                <svg />
              </span>
            </button>
          </div>
        </div>
        <button
          class="c-ladder-page__add-tab-button"
          title="Add Tab"
        >
          <span
            class="c-ladder-page__add-tab-icon"
          >
            <svg />
          </span>
        </button>
      </div>
      <div
        class="c-route-ladders"
        data-testid="route-ladders-div"
      >
        <div
          class="c-new-route-ladder__header card"
        >
          <div
            class="card-body"
          >
            <div
              class="c-route-ladder__header__action-container"
            />
            <div
              class="c-route-pill c-route-pill--bus c-route-pill--large-format c-route-ladder__route-pill c-route-pill"
              id="route-pill:rq:"
            >
              28
            </div>
            <div
              class="c-route-ladder__close-button-container"
            >
              <button
                aria-label="Close"
                class="btn-close p-2"
                type="button"
              />
            </div>
          </div>
        </div>
        <div
          class="c-route-ladder__controls"
        >
          <button
            class="c-route-ladder__reverse"
          >
            <span
              class="c-route-ladder__reverse-icon"
            >
              <svg />
            </span>
            Reverse
          </button>
        </div>
        loading...
        <div
          class="c-new-route-ladder__header card"
        >
          <div
            class="card-body"
          >
            <div
              class="c-route-ladder__header__action-container"
            >
              <div
                class="mock-tippy"
              >
                <div
                  class="mock-tippy-content"
                >
                  Active detour
                </div>
                <div
                  class="c-route-ladder__alert-icon"
                >
                  <svg
                    aria-hidden="true"
                    aria-label="Route Alert"
                    class="bi bi-exclamation-triangle-fill"
                    fill="currentColor"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M8.982 1.566a1.13 1.13 0 0 0-1.96 0L.165 13.233c-.457.778.091 1.767.98 1.767h13.713c.889 0 1.438-.99.98-1.767zM8 5c.535 0 .954.462.9.995l-.35 3.507a.552.552 0 0 1-1.1 0L7.1 5.995A.905.905 0 0 1 8 5m.002 6a1 1 0 1 1 0 2 1 1 0 0 1 0-2"
                    />
                  </svg>
                </div>
              </div>
            </div>
            <div
              class="c-route-pill c-route-pill--bus c-route-pill--large-format c-route-ladder__route-pill c-route-pill"
              id="route-pill:rs:"
            >
              1
            </div>
            <div
              class="c-route-ladder__close-button-container"
            >
              <button
                aria-label="Close"
                class="btn-close p-2"
                type="button"
              />
            </div>
          </div>
        </div>
        <div
          class="c-route-ladder__controls"
        >
          <button
            class="c-route-ladder__reverse"
          >
            <span
              class="c-route-ladder__reverse-icon"
            >
              <svg />
            </span>
            Reverse
          </button>
        </div>
        loading...
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`LadderPage renders with route tabs 1`] = `
<DocumentFragment>
  <div
    class="c-ladder-page c-ladder-page--picker-container-visible "
  >
    <div
      class="c-notifications"
    />
    <div
      class="c-picker-container c-picker-container--visible"
      data-testid="picker-container"
    >
      <button
        class="c-drawer-tab c-drawer-tab__tab-button"
        title="Collapse"
      >
        <span>
          <svg />
        </span>
      </button>
      <div
        class="c-ladder-page__routes-presets-toggle u-hideable"
      >
        <button
          class="c-ladder-page__routes_picker_button--selected"
          id="c-ladder-page__routes_picker_button"
        >
          Routes
        </button>
        <button
          class="c-ladder-page__routes_picker_button--unselected"
          id="c-ladder-page__presets_picker_button"
        >
          Presets
        </button>
      </div>
      <div
        class="c-route-picker u-hideable"
      >
        <div
          class="c-route-filter"
        >
          <div
            class="c-route-filter__text"
          >
            <input
              class="c-route-filter__input"
              placeholder="Search routes"
              type="text"
              value=""
            />
          </div>
        </div>
        <div
          class="c-garage-filter"
        >
          <button
            class="c-garage-filter__show-hide-button"
            title="Toggle Garage Filter"
          >
            <div
              class="c-garage-filter__header"
            >
              Filter garages
            </div>
            <div
              class="c-garage-filter__show-hide-icon"
            >
              <span>
                <svg />
              </span>
            </div>
          </button>
        </div>
        <div
          class="c-route-picker__routes-container"
        >
          <ul
            class="c-route-picker__route-list"
          >
            <li>
              <button
                class="c-route-picker__route-list-button"
                tabindex="-1"
              >
                28
              </button>
            </li>
          </ul>
          <ul
            class="c-route-picker__selected-routes"
          >
            <li>
              <button
                class="c-route-picker__selected-routes-button"
                tabindex="-1"
              >
                1
                <span
                  class="c-route-picker__selected-routes-button-icon"
                >
                  <svg />
                </span>
              </button>
            </li>
          </ul>
        </div>
      </div>
    </div>
    <div
      aria-hidden="true"
      class="c-picker-container-backdrop"
      data-testid="picker-container-backdrop"
    />
    <div
      class="c-ladder-page__tab-bar-and-ladders"
    >
      <div
        class="c-ladder-page__route-tab-bar"
        role="tablist"
      >
        <div
          aria-selected="true"
          class="c-ladder-page__tab c-ladder-page__tab-current"
          role="tab"
          tabindex="-1"
        >
          <div
            class="c-ladder-page__tab-contents"
          >
            <div
              class="c-ladder-page__tab-title"
            >
              Untitled
            </div>
            <button
              class="c-ladder-page__tab-save-button"
              title="Save"
            >
              <span>
                <svg />
              </span>
            </button>
            <button
              class="c-old-close-button"
              data-testid="close-button"
              title="Close"
            >
              <span>
                <svg />
              </span>
            </button>
          </div>
        </div>
        <div
          aria-selected="false"
          class="c-ladder-page__tab"
          role="tab"
          tabindex="0"
        >
          <div
            class="c-ladder-page__tab-contents"
          >
            <div
              class="c-ladder-page__tab-title"
            >
              Untitled
            </div>
            <button
              class="c-old-close-button"
              data-testid="close-button"
              title="Close"
            >
              <span>
                <svg />
              </span>
            </button>
          </div>
        </div>
        <button
          class="c-ladder-page__add-tab-button"
          title="Add Tab"
        >
          <span
            class="c-ladder-page__add-tab-icon"
          >
            <svg />
          </span>
        </button>
      </div>
      <div
        class="c-route-ladders"
        data-testid="route-ladders-div"
      >
        <div
          class="c-new-route-ladder__header card"
        >
          <div
            class="card-body"
          >
            <div
              class="c-route-ladder__header__action-container"
            />
            <div
              class="c-route-pill c-route-pill--bus c-route-pill--large-format c-route-ladder__route-pill c-route-pill"
              id="route-pill:r0:"
            >
              1
            </div>
            <div
              class="c-route-ladder__close-button-container"
            >
              <button
                aria-label="Close"
                class="btn-close p-2"
                type="button"
              />
            </div>
          </div>
        </div>
        <div
          class="c-route-ladder__controls"
        >
          <button
            class="c-route-ladder__reverse"
          >
            <span
              class="c-route-ladder__reverse-icon"
            >
              <svg />
            </span>
            Reverse
          </button>
        </div>
        loading...
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`LadderPage renders with selectedRoutes in different order than routes data 1`] = `
<DocumentFragment>
  <div
    class="c-ladder-page c-ladder-page--picker-container-visible "
  >
    <div
      class="c-notifications"
    />
    <div
      class="c-picker-container c-picker-container--visible"
      data-testid="picker-container"
    >
      <button
        class="c-drawer-tab c-drawer-tab__tab-button"
        title="Collapse"
      >
        <span>
          <svg />
        </span>
      </button>
      <div
        class="c-ladder-page__routes-presets-toggle u-hideable"
      >
        <button
          class="c-ladder-page__routes_picker_button--selected"
          id="c-ladder-page__routes_picker_button"
        >
          Routes
        </button>
        <button
          class="c-ladder-page__routes_picker_button--unselected"
          id="c-ladder-page__presets_picker_button"
        >
          Presets
        </button>
      </div>
      <div
        class="c-route-picker u-hideable"
      >
        <div
          class="c-route-filter"
        >
          <div
            class="c-route-filter__text"
          >
            <input
              class="c-route-filter__input"
              placeholder="Search routes"
              type="text"
              value=""
            />
          </div>
        </div>
        <div
          class="c-garage-filter"
        >
          <button
            class="c-garage-filter__show-hide-button"
            title="Toggle Garage Filter"
          >
            <div
              class="c-garage-filter__header"
            >
              Filter garages
            </div>
            <div
              class="c-garage-filter__show-hide-icon"
            >
              <span>
                <svg />
              </span>
            </div>
          </button>
        </div>
        <div
          class="c-route-picker__routes-container"
        >
          <ul
            class="c-route-picker__route-list"
          />
          <ul
            class="c-route-picker__selected-routes"
          >
            <li>
              <button
                class="c-route-picker__selected-routes-button"
                tabindex="-1"
              >
                28
                <span
                  class="c-route-picker__selected-routes-button-icon"
                >
                  <svg />
                </span>
              </button>
            </li>
            <li>
              <button
                class="c-route-picker__selected-routes-button"
                tabindex="-1"
              >
                1
                <span
                  class="c-route-picker__selected-routes-button-icon"
                >
                  <svg />
                </span>
              </button>
            </li>
          </ul>
        </div>
      </div>
    </div>
    <div
      aria-hidden="true"
      class="c-picker-container-backdrop"
      data-testid="picker-container-backdrop"
    />
    <div
      class="c-ladder-page__tab-bar-and-ladders"
    >
      <div
        class="c-ladder-page__route-tab-bar"
        role="tablist"
      >
        <div
          aria-selected="true"
          class="c-ladder-page__tab c-ladder-page__tab-current"
          role="tab"
          tabindex="-1"
        >
          <div
            class="c-ladder-page__tab-contents"
          >
            <div
              class="c-ladder-page__tab-title"
            >
              Untitled
            </div>
            <button
              class="c-ladder-page__tab-save-button"
              title="Save"
            >
              <span>
                <svg />
              </span>
            </button>
            <button
              class="c-old-close-button"
              data-testid="close-button"
              title="Close"
            >
              <span>
                <svg />
              </span>
            </button>
          </div>
        </div>
        <button
          class="c-ladder-page__add-tab-button"
          title="Add Tab"
        >
          <span
            class="c-ladder-page__add-tab-icon"
          >
            <svg />
          </span>
        </button>
      </div>
      <div
        class="c-route-ladders"
        data-testid="route-ladders-div"
      >
        <div
          class="c-new-route-ladder__header card"
        >
          <div
            class="card-body"
          >
            <div
              class="c-route-ladder__header__action-container"
            />
            <div
              class="c-route-pill c-route-pill--bus c-route-pill--large-format c-route-ladder__route-pill c-route-pill"
              id="route-pill:ri:"
            >
              28
            </div>
            <div
              class="c-route-ladder__close-button-container"
            >
              <button
                aria-label="Close"
                class="btn-close p-2"
                type="button"
              />
            </div>
          </div>
        </div>
        <div
          class="c-route-ladder__controls"
        >
          <button
            class="c-route-ladder__reverse"
          >
            <span
              class="c-route-ladder__reverse-icon"
            >
              <svg />
            </span>
            Reverse
          </button>
        </div>
        loading...
        <div
          class="c-new-route-ladder__header card"
        >
          <div
            class="card-body"
          >
            <div
              class="c-route-ladder__header__action-container"
            />
            <div
              class="c-route-pill c-route-pill--bus c-route-pill--large-format c-route-ladder__route-pill c-route-pill"
              id="route-pill:rk:"
            >
              1
            </div>
            <div
              class="c-route-ladder__close-button-container"
            >
              <button
                aria-label="Close"
                class="btn-close p-2"
                type="button"
              />
            </div>
          </div>
        </div>
        <div
          class="c-route-ladder__controls"
        >
          <button
            class="c-route-ladder__reverse"
          >
            <span
              class="c-route-ladder__reverse-icon"
            >
              <svg />
            </span>
            Reverse
          </button>
        </div>
        loading...
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`LadderPage renders with timepoints 1`] = `
<DocumentFragment>
  <div
    class="c-ladder-page c-ladder-page--picker-container-visible "
  >
    <div
      class="c-notifications"
    />
    <div
      class="c-picker-container c-picker-container--visible"
      data-testid="picker-container"
    >
      <button
        class="c-drawer-tab c-drawer-tab__tab-button"
        title="Collapse"
      >
        <span>
          <svg />
        </span>
      </button>
      <div
        class="c-ladder-page__routes-presets-toggle u-hideable"
      >
        <button
          class="c-ladder-page__routes_picker_button--selected"
          id="c-ladder-page__routes_picker_button"
        >
          Routes
        </button>
        <button
          class="c-ladder-page__routes_picker_button--unselected"
          id="c-ladder-page__presets_picker_button"
        >
          Presets
        </button>
      </div>
      <div
        class="c-route-picker u-hideable"
      >
        <div
          class="c-route-filter"
        >
          <div
            class="c-route-filter__text"
          >
            <input
              class="c-route-filter__input"
              placeholder="Search routes"
              type="text"
              value=""
            />
          </div>
        </div>
        <div
          class="c-garage-filter"
        >
          <button
            class="c-garage-filter__show-hide-button"
            title="Toggle Garage Filter"
          >
            <div
              class="c-garage-filter__header"
            >
              Filter garages
            </div>
            <div
              class="c-garage-filter__show-hide-icon"
            >
              <span>
                <svg />
              </span>
            </div>
          </button>
        </div>
        <div
          class="c-route-picker__routes-container"
        >
          <ul
            class="c-route-picker__route-list"
          />
          <ul
            class="c-route-picker__selected-routes"
          >
            <li>
              <button
                class="c-route-picker__selected-routes-button"
                tabindex="-1"
              >
                28
                <span
                  class="c-route-picker__selected-routes-button-icon"
                >
                  <svg />
                </span>
              </button>
            </li>
            <li>
              <button
                class="c-route-picker__selected-routes-button"
                tabindex="-1"
              >
                1
                <span
                  class="c-route-picker__selected-routes-button-icon"
                >
                  <svg />
                </span>
              </button>
            </li>
          </ul>
        </div>
      </div>
    </div>
    <div
      aria-hidden="true"
      class="c-picker-container-backdrop"
      data-testid="picker-container-backdrop"
    />
    <div
      class="c-ladder-page__tab-bar-and-ladders"
    >
      <div
        class="c-ladder-page__route-tab-bar"
        role="tablist"
      >
        <div
          aria-selected="true"
          class="c-ladder-page__tab c-ladder-page__tab-current"
          role="tab"
          tabindex="-1"
        >
          <div
            class="c-ladder-page__tab-contents"
          >
            <div
              class="c-ladder-page__tab-title"
            >
              Untitled
            </div>
            <button
              class="c-ladder-page__tab-save-button"
              title="Save"
            >
              <span>
                <svg />
              </span>
            </button>
            <button
              class="c-old-close-button"
              data-testid="close-button"
              title="Close"
            >
              <span>
                <svg />
              </span>
            </button>
          </div>
        </div>
        <button
          class="c-ladder-page__add-tab-button"
          title="Add Tab"
        >
          <span
            class="c-ladder-page__add-tab-icon"
          >
            <svg />
          </span>
        </button>
      </div>
      <div
        class="c-route-ladders"
        data-testid="route-ladders-div"
      >
        <div
          class="c-new-route-ladder__header card"
        >
          <div
            class="card-body"
          >
            <div
              class="c-route-ladder__header__action-container"
            />
            <div
              class="c-route-pill c-route-pill--bus c-route-pill--large-format c-route-ladder__route-pill c-route-pill"
              id="route-pill:rm:"
            >
              28
            </div>
            <div
              class="c-route-ladder__close-button-container"
            >
              <button
                aria-label="Close"
                class="btn-close p-2"
                type="button"
              />
            </div>
          </div>
        </div>
        <div
          class="c-route-ladder__controls"
        >
          <button
            class="c-route-ladder__reverse"
          >
            <span
              class="c-route-ladder__reverse-icon"
            >
              <svg />
            </span>
            Reverse
          </button>
        </div>
        <div
          class="c-ladder"
          style="width: 184px;"
        >
          <svg
            class="c-ladder__svg"
            height="0"
            viewBox="-92 -55 184 0"
            width="184"
          >
            <line
              class="c-ladder__line"
              x1="-40"
              x2="-40"
              y1="0"
              y2="-110"
            />
            <line
              class="c-ladder__line"
              x1="40"
              x2="40"
              y1="0"
              y2="-110"
            />
            <circle
              class="c-ladder__stop-circle"
              cx="-40"
              cy="0"
              r="3"
            />
            <circle
              class="c-ladder__stop-circle"
              cx="40"
              cy="0"
              r="3"
            />
          </svg>
          <div
            class="mock-tippy"
          >
            <div
              class="mock-tippy-content"
            >
              MATPN Name
            </div>
            <text
              class="c-ladder__timepoint-name"
              dominant-baseline="middle"
              text-anchor="middle"
              x="0"
              y="0"
            >
              MATPN
            </text>
          </div>
          <circle
            class="c-ladder__stop-circle"
            cx="-40"
            cy="-55"
            r="3"
          />
          <circle
            class="c-ladder__stop-circle"
            cx="40"
            cy="-55"
            r="3"
          />
          <div
            class="mock-tippy"
          >
            <div
              class="mock-tippy-content"
            >
              WELLH Name
            </div>
            <text
              class="c-ladder__timepoint-name"
              dominant-baseline="middle"
              text-anchor="middle"
              x="0"
              y="-55"
            >
              WELLH
            </text>
          </div>
          <circle
            class="c-ladder__stop-circle"
            cx="-40"
            cy="-110"
            r="3"
          />
          <circle
            class="c-ladder__stop-circle"
            cx="40"
            cy="-110"
            r="3"
          />
          <div
            class="mock-tippy"
          >
            <div
              class="mock-tippy-content"
            >
              MORTN Name
            </div>
            <text
              class="c-ladder__timepoint-name"
              dominant-baseline="middle"
              text-anchor="middle"
              x="0"
              y="-110"
            >
              MORTN
            </text>
          </div>
        </div>
        <div
          class="c-incoming-box"
        />
        <div
          class="c-new-route-ladder__header card"
        >
          <div
            class="card-body"
          >
            <div
              class="c-route-ladder__header__action-container"
            />
            <div
              class="c-route-pill c-route-pill--bus c-route-pill--large-format c-route-ladder__route-pill c-route-pill"
              id="route-pill:ro:"
            >
              1
            </div>
            <div
              class="c-route-ladder__close-button-container"
            >
              <button
                aria-label="Close"
                class="btn-close p-2"
                type="button"
              />
            </div>
          </div>
        </div>
        <div
          class="c-route-ladder__controls"
        >
          <button
            class="c-route-ladder__reverse"
          >
            <span
              class="c-route-ladder__reverse-icon"
            >
              <svg />
            </span>
            Reverse
          </button>
        </div>
        <div
          class="c-ladder"
          style="width: 184px;"
        >
          <svg
            class="c-ladder__svg"
            height="0"
            viewBox="-92 -55 184 0"
            width="184"
          >
            <line
              class="c-ladder__line"
              x1="-40"
              x2="-40"
              y1="0"
              y2="-110"
            />
            <line
              class="c-ladder__line"
              x1="40"
              x2="40"
              y1="0"
              y2="-110"
            />
            <circle
              class="c-ladder__stop-circle"
              cx="-40"
              cy="0"
              r="3"
            />
            <circle
              class="c-ladder__stop-circle"
              cx="40"
              cy="0"
              r="3"
            />
          </svg>
          <div
            class="mock-tippy"
          >
            <div
              class="mock-tippy-content"
            >
              WASMA Name
            </div>
            <text
              class="c-ladder__timepoint-name"
              dominant-baseline="middle"
              text-anchor="middle"
              x="0"
              y="0"
            >
              WASMA
            </text>
          </div>
          <circle
            class="c-ladder__stop-circle"
            cx="-40"
            cy="-55"
            r="3"
          />
          <circle
            class="c-ladder__stop-circle"
            cx="40"
            cy="-55"
            r="3"
          />
          <div
            class="mock-tippy"
          >
            <div
              class="mock-tippy-content"
            >
              MELWA Name
            </div>
            <text
              class="c-ladder__timepoint-name"
              dominant-baseline="middle"
              text-anchor="middle"
              x="0"
              y="-55"
            >
              MELWA
            </text>
          </div>
          <circle
            class="c-ladder__stop-circle"
            cx="-40"
            cy="-110"
            r="3"
          />
          <circle
            class="c-ladder__stop-circle"
            cx="40"
            cy="-110"
            r="3"
          />
          <div
            class="mock-tippy"
          >
            <div
              class="mock-tippy-content"
            >
              HHGAT Name
            </div>
            <text
              class="c-ladder__timepoint-name"
              dominant-baseline="middle"
              text-anchor="middle"
              x="0"
              y="-110"
            >
              HHGAT
            </text>
          </div>
        </div>
        <div
          class="c-incoming-box"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;
